--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.7"
 services:
         rabbitmq:
                 image: rabbitmq:3-management
+                container_name: rabbit
+                hostname: rabbitmq
                 ports:
                         - 5672:5672
                         - 15672:15672
@@ -13,5 +15,5 @@ services:
                         dockerfile: Dockerfile
                 depends_on:
                         - rabbitmq
-volumes: 
-        data:
+                #restart:
+                        #on-failure
